WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153956
REGRESSION(
r196222
): [AX][GTK] accessibility/gtk/caret-offsets.html failing
https://bugs.webkit.org/show_bug.cgi?id=153956
Summary
REGRESSION(r196222): [AX][GTK] accessibility/gtk/caret-offsets.html failing
Michael Catanzaro
Reported
2016-02-06 18:16:12 PST
accessibility/gtk/caret-offsets.html is failing since
r196222
: --- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/accessibility/gtk/caret-offsets-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/accessibility/gtk/caret-offsets-actual.txt @@ -23,7 +23,7 @@ PASS caretMovedData is "Heading|5" PASS caretMovedData is "Paragraph|5" PASS caretMovedData is "Paragraph|20" -PASS caretMovedData is "Paragraph|30" +FAIL caretMovedData should be Paragraph|30. Was . PASS setCaretOffset(link, 5) is true PASS caretMovedData is "Paragraph|17" PASS list.role is "AXRole: AXList" @@ -41,7 +41,7 @@ PASS table.childrenCount is 1 PASS row.role is "AXRole: AXRow" PASS tableCell.role is "AXRole: AXCell" -PASS caretMovedData is "Cell|2" +FAIL caretMovedData should be Cell|2. Was . PASS successfullyParsed is true TEST COMPLETE
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r196222%20(13632)/results.html
Attachments
Patch
(11.12 KB, patch)
2016-05-06 17:16 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-02-06 18:16:29 PST
<
rdar://problem/24540768
>
Radar WebKit Bug Importer
Comment 2
2016-02-06 18:16:48 PST
<
rdar://problem/24540769
>
Joanmarie Diggs
Comment 3
2016-05-06 17:16:02 PDT
Created
attachment 278295
[details]
Patch
WebKit Commit Bot
Comment 4
2016-05-07 06:03:15 PDT
Comment on
attachment 278295
[details]
Patch Clearing flags on attachment: 278295 Committed
r200542
: <
http://trac.webkit.org/changeset/200542
>
WebKit Commit Bot
Comment 5
2016-05-07 06:03:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug